default/objects/NVMContactWorld__DispositionCodes__c/NVMContactWorld__DispositionCodes__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Disposition Codes</label>
</CustomObject>