default/objects/NVMContactWorld__DispositionCodes__c/fields/NVMContactWorld__CallOutcomeMapping__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CallOutcomeMapping__c</fullName>
    <inlineHelpText>Call outcome mapping for automatically setting disposition codes.</inlineHelpText>
    <label>Call outcome mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>