default/objects/NVMContactWorld__DispositionCodes__c/fields/NVMContactWorld__Connected__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Value indicating whether the disposition code should result in the agent moving to the next entry.</inlineHelpText>
    <label>Progress to next record</label>
    <type>Checkbox</type>
</CustomField>