default/objects/NVMContactWorld__DispositionCodes__c/fields/NVMContactWorld__ProgressionMode__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__ProgressionMode__c</fullName>
    <inlineHelpText>Value indicating the mode of progression in the Connect dialler.</inlineHelpText>
    <label>Progression Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>